# editor

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/contradiction_detector/: __init__.py  parsers.py  pipeline.py  schemas.py
src/contradiction_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
