[project]
name = "contradiction-detector"
version = "0.1.0"
description = "Detects contradictions in text and returns structured results."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
